--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,17 @@ node_js:
 dist: focal
 
 deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $github_token
-  local_dir: build
-  on:
-    branches:
-      only:
-        - main
-        - 101435500-WillSteep
+  - provider: pages
+    skip_cleanup: true
+    github_token: $github_token
+    local_dir: build
+    on:
+      branch: main
+  
+  - provider: pages
+    skip_cleanup: true
+    github_token: $github_token
+    local_dir: build
+    on:
+      branch: 101435500-WillSteep
+      
